fix(backend): fix endpoint environments

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,4 +15,6 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o /wicc
 
 EXPOSE 8080
 
-CMD APP_ENV=production /wicc
+ENV NODE_ENV=production
+
+CMD /wicc
